<resources>
    <string name="app_name">My Vocab</string>

    <string name="title_section1">Personal Vocab Builder</string>
    <string name="title_section2">My Vocab</string>
    <string name="title_section3">Review</string>
    <string name="title_section4">Test</string>
    <string name="title_section5">Dictionary</string>
    <string name="title_section6">Categories</string>
    <string name="title_section7">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Test</string>

    <string name="action_settings">Settings</string>
    <string name="add_vocab_button">Add Vocab</string>
    <string name="title_activity_my_vocab">My Vocab</string>

    <string name="hello_world">Hello world!</string>
    <string name="vocab_level">Vocab Level Bars</string>
    <string name="del_vocab_button">Delete Vocab</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_categories">Categories</string>
    <string name="word_definition_button"><![CDATA[Word -> Definition]]></string>
    <string name="definition_word_button"><![CDATA[Definition -> Word]]></string>
    <string name="title_activity_word_definition">Review</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="sample_word">Sample Word</string>
    <string name="sample_definition">Sample Definition</string>
    <string name="level_difficult">Difficult</string>
    <string name="level_familiar">Familiar</string>
    <string name="level_easy">Easy</string>
    <string name="level_perfect">Perfect</string>
    <string name="review_option_selected">Review Option</string>
    <string name="level_again">Again</string>
    <string name="categories_my_vocab">My Vocab</string>
    <string name="title_activity_my_word_bank">My Word Bank</string>
    <string name="title_activity_gmat">GMAT</string>
    <string name="title_activity_gre">GRE</string>
    <string name="empty_text_view">Begin by adding the vocab you want to learn!</string>
    <string name="label_vocab_button">Add Vocab To</string>
    <string name="select_all_button">Select All</string>
    <string name="search_vocab">Search Vocab</string>
    <string name="search_button">Search Vocab</string>
    <string name="review_button">Review</string>
    <string name="add_category">Add Category</string>
    <string name="sort_vocab_button">Sort Vocab</string>
    <color name="white">#ffffff</color>
    <color name="app_icon_color">#2b5ea2</color>
    <color name="dark_primary_color">#244f88</color>
    <color name="light_primary_color">#5e8ed1</color>


    <string-array name="table_array">
        <item>My Vocab</item>
        <item>My Word Bank</item>
        <item>GMAT</item>
        <item>GRE</item>
    </string-array>


</resources>
