<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="charlesli.com.personalvocabbuilder.controller.MyWordBank">

    <item android:id="@+id/add_vocab_my_word_bank_button"
          android:title="@string/add_vocab_button"
          android:icon="@drawable/ic_action_new"
          android:orderInCategory="100"
          app:showAsAction="always"/>

    <item android:id="@+id/del_my_word_bank_button"
        android:title="@string/del_vocab_button"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/label_my_word_bank_button"
        android:title="@string/label_vocab_button"
        android:icon="@drawable/ic_action_labels"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/select_all_my_word_bank_button"
        android:title="@string/select_all_button"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"/>


</menu>
