<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".io.WordDefinition">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sample_word"
        android:id="@+id/topTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sample_definition"
        android:id="@+id/bottomTextView"
        android:layout_below="@+id/topTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_answer"
        android:id="@+id/revealButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:text="@string/level_again"
        android:id="@+id/lvl_again_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/bottomTextView"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:text="@string/level_difficult"
        android:id="@+id/lvl_difficult_button"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_below="@+id/lvl_again_button"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:text="@string/level_familiar"
        android:id="@+id/lvl_familiar_button"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_below="@+id/lvl_difficult_button"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:text="@string/level_easy"
        android:id="@+id/lvl_easy_button"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_below="@+id/lvl_familiar_button"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:text="@string/level_perfect"
        android:id="@+id/lvl_perfect_button"
        android:layout_marginTop="@dimen/button_top_margin"
        android:layout_below="@+id/lvl_easy_button"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
