<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Review">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/sample_word"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/bottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/sample_definition"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/revealButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/reveal_answer"/>

    <Button
        android:id="@+id/lvl_again_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvl_difficult_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/level_again"/>

    <Button
        android:id="@+id/lvl_difficult_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvl_familiar_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/level_difficult"/>

    <Button
        android:id="@+id/lvl_familiar_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvl_easy_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/level_familiar"/>

    <Button
        android:id="@+id/lvl_easy_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvl_perfect_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/level_easy"/>

    <Button
        android:id="@+id/lvl_perfect_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/level_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/level_perfect"/>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/reviewProgressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/my_toolbar"
        android:indeterminate="false"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"/>


</RelativeLayout>
